--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 09:05:02 2018</p>
+         Last Run: Tue Oct 30 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>2</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>1</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -62,7 +62,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>4</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,7 +172,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "46",
-                 "51",
+                 "50",
                  "54"
                ]
              },
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
-                 "1",
-                 "3"
+                 "5",
+                 "5",
+                 "4"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 09:05:02 2018</p>
+         Last Run: Tue Oct 30 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -265,7 +265,7 @@
                         <td>0</td>
                         <td>8</td>
                         <td>NNW</td>
-                        <td>85</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -276,8 +276,8 @@
                         <td>67</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>NNE</td>
-                        <td>90</td>
+                        <td>NNW</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -398,8 +398,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "79",
-                 "85",
-                 "90"
+                 "84",
+                 "89"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 09:05:02 2018</p>
+         Last Run: Tue Oct 30 10:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -475,7 +475,7 @@
                         <td>Chance of Rain</td>
                         <td>5</td>
                         <td>3</td>
-                        <td>52</td>
+                        <td>53</td>
                         <td>59</td>
                         <td>1</td>
                         <td>10</td>
@@ -487,8 +487,8 @@
                         <td>Chance of Rain</td>
                         <td>6</td>
                         <td>4</td>
-                        <td>54</td>
-                        <td>58</td>
+                        <td>55</td>
+                        <td>57</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -591,8 +591,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "53",
-                 "52",
-                 "54"
+                 "53",
+                 "55"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "61",
                  "59",
-                 "58"
+                 "57"
                ]
              },
              {
