--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 13:05:02 2018</p>
+         Last Run: Tue Oct 30 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -36,21 +36,21 @@
                         <td>0</td>
                         <td>45</td>
                         <td>0</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>3</td>
                         <td>0</td>
-                        <td>1</td>
-                        <td>50</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>49</td>
+                        <td>0</td>
+                        <td>11</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,7 +58,7 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
@@ -161,7 +161,7 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "1",
+                 "0",
                  "1"
                ]
              },
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "45",
-                 "50",
-                 "54"
+                 "49",
+                 "53"
                ]
              },
              {
@@ -182,8 +182,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "5",
+                 "3",
+                 "2",
                  "6"
                ]
              }
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 13:05:02 2018</p>
+         Last Run: Tue Oct 30 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -245,15 +245,15 @@
                   <tbody>
                      <tr>
                         <td>10:00 AM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Overcast</td>
                         <td>0</td>
-                        <td>-3</td>
+                        <td>-2</td>
                         <td>9</td>
                         <td>81</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>NW</td>
-                        <td>79</td>
+                        <td>6</td>
+                        <td>WNW</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -261,23 +261,23 @@
                         <td>2</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>71</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
+                        <td>W</td>
                         <td>85</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>8</td>
                         <td>66</td>
                         <td>0</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>89</td>
+                        <td>90</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
+                 "-2",
                  "0",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -387,7 +387,7 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "81",
-                 "71",
+                 "72",
                  "66"
                ]
              },
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "79",
+                 "80",
                  "85",
-                 "89"
+                 "90"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 13:05:02 2018</p>
+         Last Run: Tue Oct 30 14:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -461,22 +461,22 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>4</td>
-                        <td>2</td>
+                        <td>5</td>
+                        <td>3</td>
                         <td>55</td>
-                        <td>63</td>
+                        <td>59</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NW</td>
+                        <td>WNW</td>
                         <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>5</td>
-                        <td>3</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>55</td>
-                        <td>62</td>
+                        <td>57</td>
                         <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -485,10 +485,10 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
+                        <td>7</td>
                         <td>5</td>
-                        <td>3</td>
                         <td>55</td>
-                        <td>61</td>
+                        <td>56</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -519,9 +519,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "2",
                  "3",
-                 "3"
+                 "4",
+                 "5"
                ]
              },
              {
@@ -531,9 +531,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "4",
                  "5",
-                 "5"
+                 "6",
+                 "7"
                ]
              }
            ]
@@ -601,9 +601,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "63",
-                 "62",
-                 "61"
+                 "59",
+                 "57",
+                 "56"
                ]
              },
              {
