--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 14:05:02 2018</p>
+         Last Run: Tue Oct 30 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>3</td>
+                        <td>2</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -46,11 +46,11 @@
                         <td>3</td>
                         <td>0</td>
                         <td>0</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>2</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>6</td>
+                        <td>5</td>
                      </tr>
                   </tbody>
                </table>
@@ -172,8 +172,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "45",
-                 "49",
-                 "53"
+                 "50",
+                 "54"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "3",
                  "2",
-                 "6"
+                 "1",
+                 "5"
                ]
              }
            ]
@@ -219,12 +219,13 @@
                      options: options
                   });
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 14:05:02 2018</p>
+         Last Run: Tue Oct 30 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -247,11 +248,11 @@
                         <td>10:00 AM</td>
                         <td>Overcast</td>
                         <td>0</td>
-                        <td>-2</td>
+                        <td>-3</td>
                         <td>9</td>
-                        <td>81</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>6</td>
+                        <td>8</td>
                         <td>WNW</td>
                         <td>80</td>
                      </tr>
@@ -264,20 +265,20 @@
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>85</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>3</td>
-                        <td>1</td>
-                        <td>8</td>
-                        <td>66</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>SSW</td>
-                        <td>90</td>
+                        <td>67</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>S</td>
+                        <td>89</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,9 +305,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-2",
+                 "-3",
                  "0",
-                 "1"
+                 "0"
                ]
              },
              {
@@ -386,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
+                 "79",
                  "72",
-                 "66"
+                 "67"
                ]
              },
              {
@@ -399,7 +400,7 @@
                "data":[
                  "80",
                  "85",
-                 "90"
+                 "89"
                ]
              }
            ]
@@ -439,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 14:05:02 2018</p>
+         Last Run: Tue Oct 30 15:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -461,38 +462,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>5</td>
-                        <td>3</td>
+                        <td>6</td>
+                        <td>4</td>
                         <td>55</td>
                         <td>59</td>
                         <td>1</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>94</td>
+                        <td>81</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>6</td>
-                        <td>4</td>
+                        <td>7</td>
+                        <td>5</td>
                         <td>55</td>
                         <td>57</td>
                         <td>1</td>
                         <td>10</td>
-                        <td>NNW</td>
-                        <td>94</td>
+                        <td>NW</td>
+                        <td>70</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
+                        <td>52</td>
                         <td>55</td>
-                        <td>56</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>10</td>
                         <td>NNW</td>
-                        <td>93</td>
+                        <td>64</td>
                      </tr>
                   </tbody>
                </table>
@@ -519,8 +520,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "3",
                  "4",
+                 "5",
                  "5"
                ]
              },
@@ -531,8 +532,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "5",
                  "6",
+                 "7",
                  "7"
                ]
              }
@@ -592,7 +593,7 @@
                "data":[
                  "55",
                  "55",
-                 "55"
+                 "52"
                ]
              },
              {
@@ -603,7 +604,7 @@
                "data":[
                  "59",
                  "57",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -612,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "94",
-                 "93"
+                 "81",
+                 "70",
+                 "64"
                ]
              }
            ]
