--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 15:05:02 2018</p>
+         Last Run: Tue Oct 30 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Oct 30, 2018 -  8:15PM til  9:45PM</H4>
                <table class="table table-striped">
@@ -38,7 +38,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>2</td>
+                        <td>11</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -50,7 +50,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>W</td>
-                        <td>1</td>
+                        <td>5</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>2</td>
                         <td>-1</td>
                         <td>1</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
-                        <td>11</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -173,7 +173,7 @@
                "data":[
                  "45",
                  "50",
-                 "54"
+                 "55"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "2",
-                 "1",
-                 "5"
+                 "11",
+                 "5",
+                 "7"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 15:05:02 2018</p>
+         Last Run: Tue Oct 30 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -247,38 +247,38 @@
                      <tr>
                         <td>10:00 AM</td>
                         <td>Overcast</td>
-                        <td>0</td>
-                        <td>-3</td>
+                        <td>1</td>
+                        <td>-1</td>
                         <td>9</td>
                         <td>79</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>WNW</td>
-                        <td>80</td>
+                        <td>6</td>
+                        <td>WSW</td>
+                        <td>89</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Overcast</td>
-                        <td>2</td>
-                        <td>0</td>
-                        <td>10</td>
-                        <td>72</td>
+                        <td>3</td>
+                        <td>1</td>
+                        <td>9</td>
+                        <td>70</td>
                         <td>0</td>
                         <td>8</td>
-                        <td>WNW</td>
-                        <td>85</td>
+                        <td>WSW</td>
+                        <td>84</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
-                        <td>Overcast</td>
-                        <td>3</td>
-                        <td>0</td>
-                        <td>8</td>
-                        <td>67</td>
-                        <td>0</td>
+                        <td>Mostly Cloudy</td>
+                        <td>4</td>
+                        <td>2</td>
+                        <td>6</td>
+                        <td>63</td>
+                        <td>1</td>
                         <td>10</td>
-                        <td>S</td>
-                        <td>89</td>
+                        <td>SSW</td>
+                        <td>78</td>
                      </tr>
                   </tbody>
                </table>
@@ -305,9 +305,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-3",
-                 "0",
-                 "0"
+                 "-1",
+                 "1",
+                 "2"
                ]
              },
              {
@@ -317,9 +317,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "0",
-                 "2",
-                 "3"
+                 "1",
+                 "3",
+                 "4"
                ]
              }
            ]
@@ -377,8 +377,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "9",
-                 "10",
-                 "8"
+                 "9",
+                 "6"
                ]
              },
              {
@@ -388,8 +388,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "79",
-                 "72",
-                 "67"
+                 "70",
+                 "63"
                ]
              },
              {
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "85",
-                 "89"
+                 "89",
+                 "84",
+                 "78"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Tue Oct 30 15:05:02 2018</p>
+         Last Run: Tue Oct 30 16:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -467,9 +467,9 @@
                         <td>55</td>
                         <td>59</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>WNW</td>
-                        <td>81</td>
+                        <td>80</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -481,17 +481,17 @@
                         <td>1</td>
                         <td>10</td>
                         <td>NW</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>52</td>
+                        <td>51</td>
                         <td>55</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>64</td>
                      </tr>
@@ -593,7 +593,7 @@
                "data":[
                  "55",
                  "55",
-                 "52"
+                 "51"
                ]
              },
              {
@@ -613,8 +613,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "81",
-                 "70",
+                 "80",
+                 "69",
                  "64"
                ]
              }
